# altair-users-ms

./: .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
src/: error.rs  main.rs  state.rs
src/extractors/: auth_user.rs
src/features/: mod.rs  profile_update.rs
src/models/: api.rs  auth.rs  mod.rs  user.rs
src/routes/: health.rs  me.rs  metrics.rs  mod.rs  users.rs
src/services/: extractor.rs  gamification_sync_service.rs  keycloak_admin_service.rs  mod.rs  users_service.rs
src/tests/: health_test.rs  users_smoke_test.rs
