[package]
name = "altair-users-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
