[package]
name = "altair-users-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["serde", "v4"] }

tower-http = { version = "0.5", features = ["cors", "trace"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono"
] }

dotenvy = "0.15"
thiserror = "1"
